# lluma

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: docs-writer.md  model-runtime-engineer.md  protocol-crypto-architect.md  rust-net-engineer.md  tauri-frontend.md  test-writer.md
apps/lluma-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/lluma-desktop/src-tauri/capabilities/: default.json
apps/lluma-desktop/src-tauri/src/: account.rs  anchor.rs  client.rs  hardware.rs  host.rs  lib.rs  main.rs  ollama.rs  settings.rs  types.rs
apps/lluma-web/: DESIGN.md  Dockerfile  README.md  index.html  lluma.css  whitepaper.html
apps/lluma-web/.do/: app.yaml
crates/lluma-broker/: Cargo.toml
crates/lluma-broker/src/: config.rs  counters.rs  error.rs  hosts.rs  ledger.rs  lib.rs  main.rs  receipts.rs  registry.rs  service.rs  snapshot.rs  spent.rs  store.rs  trial.rs  tunnel.rs
crates/lluma-broker/tests/: broker_e2e.rs  tunnel_loopback.rs
crates/lluma-client/: Cargo.toml
crates/lluma-client/examples/: bootstrap_smoke.rs  chat_probe.rs  live_smoke.rs
crates/lluma-client/src/: lib.rs
crates/lluma-client/tests/: bootstrap.rs  bootstrap_fetch.rs  e2e_slice.rs  snapshot.rs  trial_register.rs
crates/lluma-core/: Cargo.toml
crates/lluma-core/src/: error.rs  hardware.rs  lib.rs  model.rs  proto.rs  wire.rs
crates/lluma-crypto/: Cargo.toml
crates/lluma-crypto/src/: account.rs  e2e.rs  error.rs  lib.rs  ohttp.rs  tokens.rs
crates/lluma-crypto/tests/: invariant_harness.rs
crates/lluma-gateway/: Cargo.toml
crates/lluma-gateway/src/: lib.rs  main.rs
crates/lluma-host/: Cargo.toml
crates/lluma-host/src/: lib.rs  main.rs  openai.rs  register.rs  tunnel.rs
crates/lluma-issuer/: Cargo.toml
crates/lluma-issuer/src/: client.rs  error.rs  idem.rs  keys.rs  ledger.rs  lib.rs  main.rs  service.rs  spent_set.rs
crates/lluma-issuer/tests/: loop_e2e.rs
crates/lluma-keygen/: Cargo.toml
crates/lluma-keygen/src/: main.rs
crates/lluma-net/: Cargo.toml
crates/lluma-net/src/: agent.rs  bootstrap.rs  error.rs  framing.rs  lib.rs
crates/lluma-net/tests/: relay_invariant_harness.rs
crates/lluma-registry/: Cargo.toml
crates/lluma-registry/src/: catalog.rs  download.rs  lib.rs
crates/lluma-relay/: Cargo.toml
crates/lluma-relay/src/: lib.rs  main.rs
crates/lluma-runtime/: Cargo.toml
crates/lluma-runtime/src/: hardware.rs  lib.rs  recommend.rs  runner.rs
crates/lluma-runtime/tests/: llama_integration.rs
docs/: BOOTSTRAP-DEPLOY.md  DESKTOP-ASSESSMENT.md  HANDOFF-phase1-night.md  HANDOFF-phase1-night2.md  HANDOFF-phase1.md  HANDOFF.md  INFRA.md  PHASE1-FOLLOWUPS.md  website-design-brief-v2.md  website-design-brief.md
docs/architecture/: adr-0001-lluma-crypto-primitives.md  adr-0002-phase1-hosting-and-ddos.md  adr-0003-slice-static-registry-single-redeemer.md  adr-0004-gui-tunnel-hosting-identity.md
docs/superpowers/plans/: 2026-07-14-lluma-phase0-dogfood.md  2026-07-15-lluma-crypto.md  2026-07-16-lluma-issuer.md  2026-07-20-lluma-broker-full.md  2026-07-20-lluma-desktop-client.md
docs/superpowers/specs/: 2026-07-14-lluma-design.md  2026-07-15-lluma-crypto-design.md  2026-07-16-lluma-issuer-design.md  2026-07-19-lluma-broker-design.md  2026-07-19-lluma-transport-design.md  2026-07-20-lluma-desktop-client-design.md  2026-07-21-signed-bootstrap-autoconnect-design.md  2026-07-21-tunnel-autohost-restyle-design.md
docs/whitepaper/: lluma-technical-whitepaper.md
ops/deploy/: README.md  broker.env.example  deploy.sh  gen-material.sh
ops/deploy/systemd/: lluma-broker.service  lluma-gateway.service  lluma-relay.service
