[package]
name = "lluma-broker"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
lluma-core = { path = "../lluma-core" }
lluma-crypto = { path = "../lluma-crypto" }
lluma-issuer = { path = "../lluma-issuer" }
redb = "4"
serde = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
