[package]
name = "lluma-broker"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
lluma-core = { path = "../lluma-core" }
lluma-crypto = { path = "../lluma-crypto" }
lluma-issuer = { path = "../lluma-issuer" }
redb = "4"
axum = "0.7"
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { workspace = true }
blind-rsa-signatures = { workspace = true }
