[package]
name = "lluma-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "lluma-host"
path = "src/main.rs"

[dependencies]
lluma-core = { path = "../lluma-core" }
lluma-crypto = { path = "../lluma-crypto" }
axum = "0.7"
tokio = { workspace = true }
serde_json = { workspace = true }
rand_core = { workspace = true }
base64 = "0.22"
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
# tokio-tungstenite's rustls build selects no crypto provider; pin `ring` and
# install it process-wide (see main.rs) so the wss handshake has a provider.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

[dev-dependencies]
tokio = { workspace = true }
