[package]
name = "lluma-issuer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
lluma-core = { path = "../lluma-core" }
lluma-crypto = { path = "../lluma-crypto" }
axum = "0.7"
tower = "0.5"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
blind-rsa-signatures = { workspace = true }
base64 = "0.22"
reqwest = { workspace = true, optional = true }

[features]
default = ["client"]
client = ["dep:reqwest"]

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }