[package]
name = "lluma-keygen"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "lluma-keygen"
path = "src/main.rs"

[dependencies]
lluma-crypto = { path = "../lluma-crypto" }
blind-rsa-signatures = { workspace = true }
blake3 = { workspace = true }
getrandom = "0.2"
