[package]
name = "lluma-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
lluma-core = { path = "../lluma-core" }
lluma-crypto = { path = "../lluma-crypto" }
bhttp = "0.8"
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
lluma-relay = { path = "../lluma-relay" }
lluma-gateway = { path = "../lluma-gateway" }
lluma-issuer = { path = "../lluma-issuer" }
tokio = { workspace = true }
axum = "0.7"
blake3 = { workspace = true }
serde_json = { workspace = true }
blind-rsa-signatures = { workspace = true }
