[package]
name = "lluma-registry"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
lluma-core = { path = "../lluma-core" }
blake3 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
