[package]
name = "lluma-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "lluma-relay"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { workspace = true }
